--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@
   display: flex;
 }
 
+.imgContainer {
+  display: flex;
+  flex-direction: column;
+}
 .bgImage {
   width: 100%;
   height: 100%;
