--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,11 @@
   flex: 1;
   object-fit: cover;
 }
+
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+}
