styling the div

--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,10 @@ footer {
   justify-content: space-between;
   gap: 1rem;
 }
+
+.bgGradient {
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  background: linear-gradient(to top, #030615 rgba(255, 255, 255, 0));
+}
