--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,10 @@ footer {
   z-index: -1;
   background: linear-gradient(to top, #030615 rgba(255, 255, 255, 0));
 }
+
+.sideBar {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+}
