--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,18 @@ footer {
   background: #030615;
   opacity: 0.6;
 }
+
+.sideBarContents {
+  z-index: 15;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  overflow-y: scroll;
+  height: 100%;
+  width: 90%;
+  max-width: 800px;
+  margin-left: auto;
+  background-color: #030615;
+}
