adding a style for the button inside the sidebarcontents

--- a/src/index.css
+++ b/src/index.css
@@ -84,3 +84,11 @@ footer {
 .sideBarContents div {
   flex: 1;
 }
+
+.sideBarContents button {
+  background: transparent;
+  color: white;
+  border: none;
+  outline: none;
+  margin-right: auto;
+}
