--- a/src/index.css
+++ b/src/index.css
@@ -92,3 +92,15 @@ footer {
   outline: none;
   margin-right: auto;
 }
+
+@media (min-width: 640px) {
+  .sideBar {
+    position: relative;
+    inset: unset;
+    min-width: 30%;
+  }
+
+  .sideBarContents {
+    margin: unset;
+  }
+}
