--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,7 @@ footer {
     position: relative;
     inset: unset;
     min-width: 30%;
+    box-shadow: 0 0 10px 10px #030615;
   }
 
   .sideBarContents {
