--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,14 @@ footer h1 {
   font-weight: 200;
 }
 
+footer button {
+  background: transparent;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 1rem;
+}
+
 .bgGradient {
   position: absolute;
   inset: 0;
