--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,10 @@ footer button:hover {
   transition-duration: 200ms;
 }
 
+.sideBarContents button:hover {
+  opacity: 0.7;
+}
+
 @media (min-width: 640px) {
   .sideBar {
     position: relative;
