--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,7 @@ footer button:hover {
   margin-right: auto;
   cursor: pointer;
   transition-duration: 200ms;
+  padding: 1rem;
 }
 
 .sideBarContents button:hover {
