--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,13 @@ footer button:hover {
   opacity: 0.7;
 }
 
+.loadingState {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
 @media (min-width: 640px) {
   .sideBar {
     position: relative;
