--- a/src/index.css
+++ b/src/index.css
@@ -143,6 +143,7 @@ footer button:hover {
 .loadingState i {
   opacity: 0.2;
   font-size: 3rem;
+  animation: spin 1s linear infinite;
 }
 
 @media (min-width: 640px) {
