--- a/src/index.css
+++ b/src/index.css
@@ -146,6 +146,15 @@ footer button:hover {
   animation: spin 1s linear infinite;
 }
 
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 @media (min-width: 640px) {
   .sideBar {
     position: relative;
