--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,11 @@ footer button:hover {
   opacity: 0.7;
 }
 
+.descriptionTitle {
+  font-size: 0.9rem;
+  font-weight: 200;
+}
+
 .loadingState {
   display: flex;
   align-items: center;
