adding some attribute to style the class

--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,12 @@ footer button:hover {
   opacity: 0.7;
 }
 
+.descriptionContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
 .descriptionTitle {
   font-size: 1.1rem;
   font-weight: 200;
