--- a/src/index.css
+++ b/src/index.css
@@ -131,7 +131,7 @@ footer button:hover {
   margin-right: auto;
   cursor: pointer;
   transition-duration: 200ms;
-  padding: 1rem;
+  padding: 1rem 0;
 }
 
 .sideBarContents button:hover {
