--- a/src/index.css
+++ b/src/index.css
@@ -176,7 +176,7 @@ footer button:hover {
     position: relative;
     inset: unset;
     min-width: 30%;
-    max-height: 100%;
+    max-height: 100vh;
     box-shadow: 0 0 40px 1px #030615;
   }
 
